--- a/vpn/qml/widgets/dapqml-widgets-asset/brand/Vendeta/style.css
+++ b/vpn/qml/widgets/dapqml-widgets-asset/brand/Vendeta/style.css
@@ -86,6 +86,11 @@
 	color: "@text";
 }
 
+.c-grey
+{
+	color: "@light-grey";
+}
+
 .c-brand
 {
 	color: "@brand";
